@@ -7,6 +7,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.SortedSet;
+import java.util.stream.Collectors;
 
 import geometry_objects.points.Point;
 import geometry_objects.points.PointDatabase;
@@ -53,6 +54,10 @@ public class Preprocessor
 		
 		analyze();
 	}
+	public Set<Segment> getAllMinimalSegments() {
+		return _allMinimalSegments;
+	}
+	
 	
 	//
 	// Construct all segments inductively from the base segments
@@ -94,57 +99,135 @@ public class Preprocessor
 	//     * implicitSegmen
 	//
 
-	private Set<Segment> identifyAllMinimalSegments(Set<Point> implicitPoints, Set<Segment> givenSegments,
-	        Set<Segment> implicitSegments) {
+	private Set<Segment> identifyAllMinimalSegments(Set<Point> implicitPoints, Set<Segment> givenSegments, Set<Segment> implicitSegments) {
+	    Set<Segment> minimalSegments = new HashSet<>();
 
-	    // Create a set of minimal segments
-	    Set<Segment> minimalSegments = new LinkedHashSet<>();
+	    // Check all implicit segments
+	    for (Segment s : implicitSegments) {
+	        boolean isMinimal = true;
 
-	    
+	        // Check if any point of the segment is an implicit point
+	        for (Point p : s.getPoints()) {
+	            if (implicitPoints.contains(p)) {
+	                isMinimal = false;
+	                break;
+	            }
+	        }
+
+	        // Check if the segment is not already in givenSegments
+	        if (isMinimal && !givenSegments.contains(s)) {
+	            // Check if the segment is minimal
+	            for (Segment gs : givenSegments) {
+	                if (gs.HasSubSegment(s) && gs.length() < s.length()) {
+	                    isMinimal = false;
+	                    break;
+	                }
+	            }
+	            if (isMinimal) {
+	                minimalSegments.add(s);
+	            }
+	        }
+	    }
 
 	    return minimalSegments;
 	}
 
+
+
 	// Compute all implicit segments attributed to implicit points
 	private Set<Segment> computeImplicitBaseSegments(Set<Point> implicitPoints) {
 	    Set<Segment> implicitSegments = new HashSet<>();
-	    
+
+	    // For each pair of implicit points, create a segment
+	    for (Point p1 : implicitPoints) {
+	        for (Point p2 : implicitPoints) {
+	            if (!p1.equals(p2)) {
+	                implicitSegments.add(new Segment(p1, p2));
+	            }
+	        }
+	    }
+
 	    return implicitSegments;
 	}
+
 
 	/**
 	 * Invoke the precomputation procedure.
 	 */
-	public void analyze()
-	{
-		//
-		// Implicit Points
-		//
-		_implicitPoints = ImplicitPointPreprocessor.compute(_pointDatabase, _givenSegments.stream().toList());
+	public void analyze() {
+	    //
+	    // Implicit Points
+	    //
+	    _implicitPoints = ImplicitPointPreprocessor.compute(_pointDatabase, _givenSegments.stream().collect(Collectors.toList()));
 
-		//
-		// Implicit Segments attributed to implicit points
-		//
-		_implicitSegments = computeImplicitBaseSegments(_implicitPoints);
+	    //
+	    // Implicit Segments attributed to implicit points
+	    //
+	    _implicitSegments = computeImplicitBaseSegments(_implicitPoints);
 
-		//
-		// Combine the given minimal segments and implicit segments into a true set of minimal segments
-		//     *givenSegments may not be minimal
-		//     * implicitSegmen
-		//
-		_allMinimalSegments = identifyAllMinimalSegments(_implicitPoints, _givenSegments, _implicitSegments);
+	    //
+	    // Combine the given minimal segments and implicit segments into a true set of minimal segments
+	    //     *givenSegments may not be minimal
+	    //     * implicitSegments
+	    //
+	    _allMinimalSegments = identifyAllMinimalSegments(_implicitPoints, _givenSegments, _implicitSegments);
 
-		//
-		// Construct all segments inductively from the base segments
-		//
-		_nonMinimalSegments = constructAllNonMinimalSegments(_allMinimalSegments);
+	    //
+	    // Construct all segments inductively from the base segments
+	    //
+	    _nonMinimalSegments = constructAllNonMinimalSegments(_allMinimalSegments);
 
-		//
-		// Combine minimal and non-minimal into one package: our database
-		//
-		_allMinimalSegments.forEach((segment) -> _segmentDatabase.put(segment, segment));
-		_nonMinimalSegments.forEach((segment) -> _segmentDatabase.put(segment, segment));
+	    //
+	    // Combine minimal and non-minimal into one package: our database
+	    //
+	    _allMinimalSegments.forEach((segment) -> _segmentDatabase.put(segment, segment));
+	    _nonMinimalSegments.forEach((segment) -> _segmentDatabase.put(segment, segment));
 	}
+	
+	public static void main(String[] args) {
+        // Create a point database
+        PointDatabase pointDatabase = new PointDatabase();
 
+        // Create some points
+        Point p1 = new Point("A",1, 1);
+        Point p2 = new Point("B",2, 2);
+        Point p3 = new Point("C",3, 3);
+        Point p4 = new Point("D",4, 4);
+
+        // Add points to the point database
+        pointDatabase.put("A", 1, 1);
+        pointDatabase.put("B", 2, 2);
+        pointDatabase.put("C", 3, 3);
+        pointDatabase.put("D", 4, 4);
+
+        // Create some segments
+        Segment s1 = new Segment(p1, p2);
+        Segment s2 = new Segment(p2, p3);
+        Segment s3 = new Segment(p3, p4);
+
+        // Create a set of given segments
+        Set<Segment> givenSegments = new HashSet<>();
+        givenSegments.add(s1);
+        givenSegments.add(s2);
+        givenSegments.add(s3);
+
+        // Create a preprocessor object
+        Preprocessor preprocessor = new Preprocessor(pointDatabase, givenSegments);
+
+        // Invoke the precomputation procedure
+        preprocessor.analyze();
+
+        // Retrieve the minimal segments
+        Set<Segment> minimalSegments = preprocessor.getAllMinimalSegments();
+
+        // Print the minimal segments
+        System.out.println("Minimal segments:");
+        for (Segment s : minimalSegments) {
+            System.out.println(s.toString());
+        }
+    }
+
+	
+	
 	
 }
